# actix-api

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/actix_backend/: app.rs
src/app/: config.rs  mod.rs
src/controllers/: auth_controller.rs  user_controller.rs
src/middleware/: auth_middleware.rs
src/models/: user.rs
src/repository/: user_repository.rs
src/routes/: auth.rs  mod.rs  root.rs  user.rs
src/security/: jwt.rs  password.rs
src/services/: auth_service.rs  user_service.rs
src/utils/: api_response.rs  error_response.rs
