[package]
name = "actix-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
actix-identity = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.12.1", features = ["v4"] }
env_logger = "0.11.6"
actix-limitation = "0.5.1"
actix-cors = "0.7.0"